--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,15 @@ body {
   }
   
   ol, ul {
-    padding-left: 30px;
+    padding-left:10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style:italic
+  }
+  #movebutton{
+    height:40px;
+    background-color:lightblue;
+    border-radius: 5px;
+    border-width: 2px;
   }
   
   .board-row:after {
@@ -21,15 +29,15 @@ body {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 24px;
+    font-size: 64px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
+    line-height: 128px;
+    height: 128px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 128px;
   }
   
   .square:focus {
@@ -39,7 +47,18 @@ body {
   .kbd-navigation .square:focus {
     background: #ddd;
   }
-  
+  #status{
+    background-color:lightblue;
+    border:2px solid black;
+    border-style:dotted;
+    display: inline-block;
+    text-align: center;
+    font-size:20px;
+    padding:10px;
+    margin:10px;
+
+
+  }
   .game {
     display: flex;
     flex-direction: row;
